[package]
name = "tornado_executor_smart_monitoring_check_result"
version = "0.0.1"
authors = [
    "Francesco Cina <mr.francesco.cina@gmail.com>"
]
edition = "2018"

[dependencies]
async-trait = "0.1"
log = "0.4"
maplit = "1.0"
serde.workspace = true
serde_json = { version = "1.0" }
tokio = { version = "1", features = ["time"] }
tornado_executor_common = { path = "../common", version = "0.0.1" }
tornado_executor_director = { path = "../director", version = "0.0.1" }
tornado_executor_icinga2 = { path = "../icinga2", version = "0.0.1" }
tornado_engine_matcher = { path = "../../engine/matcher", version = "0.0.1" }
tornado_executor_monitoring = { path = "../monitoring", version = "0.0.1" }
tornado_common_api = { path = "../../common/api", version = "0.0.1" }
tracing = "0.1"

[dev-dependencies]
httpmock = "0.6"
rand = "0.8"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
