[package]
name = "tornado_executor_smart_monitoring_check_result"
version = "0.0.1"
authors = [
    "Francesco Cina <mr.francesco.cina@gmail.com>"
]
edition = "2018"

[dependencies]
async-trait.workspace = true
log.workspace = true
maplit.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true

tornado_executor_common = { path = "../common", version = "0.0.1" }
tornado_executor_director = { path = "../director", version = "0.0.1" }
tornado_executor_icinga2 = { path = "../icinga2", version = "0.0.1" }
tornado_engine_matcher = { path = "../../engine/matcher", version = "0.0.1" }
tornado_common_api = { path = "../../common/api", version = "0.0.1" }

[dev-dependencies]
httpmock = "0.6"
rand = "0.8"

tokio.workspace = true
