[package]
name = "spike_jmespath"
version = "0.0.1"
authors = [
    "Francesco Cina <mr.francesco.cina@gmail.com>"
]
edition = "2018"

[dependencies]
jmespath = { package = "jmespatch", version = "0.3.0" }
serde_json = "1.0"
tornado_common_api = { path = "../../common/api", version = "0.0.1" }
tornado_engine_matcher = { path = "../../engine/matcher", version = "0.0.1" }

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "jmespath_bench"
harness = false