[package]
name = "tornado_spike_parser_jmespath"
version = "0.0.1"
authors = ["Francesco Cina <mr.francesco.cina@gmail.com>"]
edition = "2018"


[dependencies]
tornado_common_api = { path = "../../common/api", version = "0.0.1" }
jmespath = { version = "0.2.0", features = ["sync"] }
serde = "1.0"
serde_json = "1.0"
thiserror = "1.0"

[dev-dependencies]
