[package]
name = "spike_tornado_events_generator"
version = "0.0.1"
authors = [
    "Francesco Cina <mr.francesco.cina@gmail.com>"
]
edition = "2018"

[dependencies]
clap = { version = "3.0.0-beta.5", default-features = false, features = ["derive", "std"] }
log = "0.4"
serde_json = "1.0"
tornado_common_api = { path = "../../common/api", version = "0.0.1" }
tornado_common_logger = { path = "../../common/logger", version = "0.0.1" }

[dev-dependencies]
