[package]
name = "tornado_common"
version = "0.0.1"
authors = ["Francesco Cina <mr.francesco.cina@gmail.com>"]
edition = "2018"

[dependencies]
actix = "0.12"
async-channel = "1.6"
async-trait = "0.1"
futures-util = { version = "0.3", default-features = false, features=["std"]}
log = "0.4"
opentelemetry = "0.16.0"
serde = { version = "1.0", features = ['derive'] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1", features = ["net", "time"] }
tokio-stream = { version = "0.1", features = ["net"] }
tokio-util = { version = "0.6", features = ["codec"] }
tornado_collector_common = { path = "../../collector/common", version = "0.0.1" }
tornado_collector_json = { path = "../../collector/json", version = "0.0.1" }
tornado_common_api = { path = "../../common/api", version = "0.0.1" }
tornado_common_logger = { path = "../../common/logger", version = "0.0.1" }
tornado_common_metrics = { path = "../../common/metrics", version = "0.0.1" }
tornado_executor_common = { path = "../../executor/common", version = "0.0.1" }
tracing = "0.1"
tracing-futures = "0.2"
tracing-opentelemetry = "0.16.0"
tracing-serde = "0.1"

# Feature nats
async-nats = { version = "0.10", optional = true }

[dev-dependencies]
actix-rt = "2.2"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
once_cell = "1.8"
opentelemetry-prometheus = "0.9"
port_check = "0.1"
rand = "0.8"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls-native-roots"] }
serial_test = "*"
testcontainers = "0.12"
tornado_common_logger = { path = "../../common/logger", version = "0.0.1" }

[features]
default = []

nats = ["async-nats"]
nats_integration_tests = ["nats"]