[package]
name = "tornado_common"
version = "0.0.1"
authors = ["Francesco Cina <mr.francesco.cina@gmail.com>"]
edition = "2018"

[dependencies]
actix.workspace = true
async-channel = "1.6"
async-trait.workspace = true
futures-util = { version = "0.3", default-features = false, features=["std"]}
log.workspace = true
opentelemetry.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-stream = { version = "0.1", features = ["net"] }
tokio-util.workspace = true
tornado_collector_common = { path = "../../collector/common", version = "0.0.1" }
tornado_collector_json = { path = "../../collector/json", version = "0.0.1" }
tornado_common_api = { path = "../../common/api", version = "0.0.1" }
tornado_common_logger = { path = "../../common/logger", version = "0.0.1" }
tornado_common_metrics = { path = "../../common/metrics", version = "0.0.1" }
tornado_executor_common = { path = "../../executor/common", version = "0.0.1" }
tracing.workspace = true
tracing-futures = "0.2"
tracing-opentelemetry = "0.16.0"

# Feature nats
async-nats = { version = "0.10", optional = true }

[dev-dependencies]
actix-rt = "2.2"
chrono.workspace = true
once_cell = "1.8"
opentelemetry-prometheus = "0.9"
port_check = "0.1"
rand = "0.8"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls-native-roots"] }
serial_test = "*"
testcontainers = "0.12"
tornado_common_logger = { path = "../../common/logger", version = "0.0.1" }

[features]
default = []

nats = ["async-nats"]
nats_integration_tests = ["nats"]