[package]
name = "tornado_common"
version = "0.0.1"
authors = ["Francesco Cina <mr.francesco.cina@gmail.com>"]
edition = "2018"

[dependencies]
async-channel = "1.6"
futures-util = { version = "0.3", default-features = false, features=["std"]}
tokio-stream = { version = "0.1", features = ["net"] }
tracing-futures = "0.2"

# Feature nats
async-nats = { version = "0.10", optional = true }

actix.workspace = true
async-trait.workspace = true
log.workspace = true
opentelemetry.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
tracing-opentelemetry.workspace = true

tornado_collector_common = { path = "../../collector/common", version = "0.0.1" }
tornado_collector_json = { path = "../../collector/json", version = "0.0.1" }
tornado_common_api = { path = "../../common/api", version = "0.0.1" }
tornado_common_logger = { path = "../../common/logger", version = "0.0.1" }
tornado_common_metrics = { path = "../../common/metrics", version = "0.0.1" }
tornado_executor_common = { path = "../../executor/common", version = "0.0.1" }

[dev-dependencies]
actix-rt = "2.2"
once_cell = "1.8"
opentelemetry-prometheus = "0.9"
port_check = "0.1"
rand = "0.8"
serial_test = "*"
testcontainers = "0.12"

chrono.workspace = true
reqwest.workspace = true

tornado_common_logger = { path = "../../common/logger", version = "0.0.1" }

[features]
default = []

nats = ["async-nats"]
nats_integration_tests = ["nats"]